--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/huynonstop/metaball-canvas#readme",
   "scripts": {
     "build": "tsc",
-    "serve": "live-server --host=localhost",
+    "serve": "cd dist && live-server --host=localhost",
     "dev": "cp index.html dist && cp index.css dist && cd dist && concurrently \"tsc -w\"  \"live-server --host=localhost --watch=dist\"",
     "predeploy": "cp index.html dist && cp index.css dist && yarn build",
     "deploy": "gh-pages -d dist"
