--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "metaball-canvas",
+  "private": true,
   "version": "1.0.0",
   "description": "A project inspired by this [video](https://www.youtube.com/watch?v=6oMZb3yP_H8&t=1489s)",
   "main": "index.html",
@@ -18,17 +19,16 @@
   },
   "homepage": "https://github.com/huynonstop/metaball-canvas#readme",
   "scripts": {
-    "build": "tsc && cp index.html dist && cp index.css dist",
-    "serve": "cd dist && live-server --host=localhost",
-    "dev": " cp index.html dist && cp index.css dist && concurrently \"tsc -w\"  \"cd dist && live-server --host=localhost --watch=.\"",
+    "dev": "vite --open",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "concurrently": "^6.3.0",
-    "live-server": "^1.2.1",
-    "typescript": "4.3.5",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "typescript": "^4.5.4",
+    "vite": "^2.9.9"
   },
   "dependencies": {
   }
