--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
-    "sourceMap": true,
-    "incremental": true,
-    "declaration": true,
-    "removeComments": true,
-    "esModuleInterop": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "moduleResolution": "Node",
     "strict": true,
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "skipLibCheck": true
   },
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "dist",
     "test",
     "seed"
   ],
-  "include": [
-    "**/*.ts"
-  ]
 }
