--- a/package.json
+++ b/package.json
@@ -17,19 +17,18 @@
   "bugs": {
     "url": "https://github.com/huynonstop/metaball-canvas/issues"
   },
-  "homepage": "https://github.com/huynonstop/metaball-canvas#readme",
+  "homepage": "https://huynonstop.github.io/metaball-canvas/",
   "scripts": {
     "dev": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages-clean gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
