--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "yarn build",
-    "deploy": "gh-pages-clean gh-pages -d dist"
+    "deploy": "ntl deploy"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
